# NeuralNotes

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/public/: sample-galaxy.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ClusterLegend.tsx  GalaxyView.tsx  InsightPanel.tsx  NotePreview.tsx  TimelineScrubber.tsx  TriagePanel.tsx
apps/desktop/src/lib/: api.ts  colors.ts  types.ts
apps/desktop/src/styles/: globals.css
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/models/: note.py
backend/app/services/: apple_notes.py  clustering.py  database.py  embeddings.py  indexer.py  redaction.py  seed.py
backend/scripts/: index_once.py  serve_stdlib.py
docs/: apple-notes-research.md  architecture.md
