[package]
name = "neuralnotes"
version = "0.1.0"
description = "NeuralNotes desktop shell"
authors = ["NeuralNotes"]
edition = "2021"

[lib]
name = "neuralnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
